tests/errors/fsm-exact-too-long.fil
comp Main<G: 5>(
  @interface[G] go_G: 1,
  @[G, G+3] + @exact[G, G+2] trig: 1
) -> () {
  fsm M[3](trig);
}
